--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "level-sub",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "minimalist level-sublevel implementation",
   "dependencies": {
     "thru": "0.0.1"
   },
   "devDependencies": {
-    "level": "0.17.0-1",
-    "leveldown": "0.9.2",
-    "level-sublevel": "5.1.1",
-    "multilevel": "5.5.0",
-    "tape": "2.1.0"
+    "level": "~0.18.0",
+    "leveldown": "~0.10.0",
+    "level-sublevel": "~5.1.0",
+    "multilevel": "~5.5.0",
+    "tape": "~2.1.0"
   },
   "author": "Jesse Tane <jesse.tane@gmail.com>",
   "repository": {
