--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.2.1",
   "description": "minimalist level-sublevel implementation",
   "dependencies": {
-    "thru": "0.0.1"
+    "thru": "0.0.2"
   },
   "devDependencies": {
-    "level": "~0.18.0",
-    "leveldown": "~0.10.0",
-    "level-sublevel": "~5.1.0",
+    "level-test": "*",
     "multilevel": "~5.5.0",
     "tape": "~2.1.0"
   },
